--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -34,17 +34,32 @@ body {
 
 //Page Header
 .page-head {
-  background-color:#674172;
+  background:#674172 url(https://unsplash.it/1920/600?image=844) no-repeat center center;
+	background-attachment: fixed;
+	background-size: cover;
   color:#FFF;
   margin-bottom:2rem;
-  padding:4rem 0 2rem;
+  padding:2rem 0 1rem;
+
+	@media (min-width: $screen-md) {
+		padding:4rem 0 2rem;
+	}
+	
+	@media (min-width: $screen-lg) {
+		padding:8rem 0 4rem;
+	}
+
+	h1 {
+		text-shadow: 1px 1px 1px #333333;
+	}
 }//page-head
 
-//Page Header
+//List Group
 .list-group {
   margin-bottom:2rem;
 }//page-head
 
+//textarea
 textarea.form-control {
 	min-height:10rem;
 }
