--- a/css/stylesheets/screen.css
+++ b/css/stylesheets/screen.css
@@ -28,18 +28,36 @@ body {
 
 /* line 36, ../sass/screen.scss */
 .page-head {
-  background-color: #674172;
+  background: #674172 url(https://unsplash.it/1920/600?image=844) no-repeat center center;
+  background-attachment: fixed;
+  background-size: cover;
   color: #FFF;
   margin-bottom: 2rem;
-  padding: 4rem 0 2rem;
+  padding: 2rem 0 1rem;
+}
+@media (min-width: 992px) {
+  /* line 36, ../sass/screen.scss */
+  .page-head {
+    padding: 4rem 0 2rem;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 36, ../sass/screen.scss */
+  .page-head {
+    padding: 8rem 0 4rem;
+  }
+}
+/* line 52, ../sass/screen.scss */
+.page-head h1 {
+  text-shadow: 1px 1px 1px #333333;
 }
 
-/* line 44, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 .list-group {
   margin-bottom: 2rem;
 }
 
-/* line 48, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 textarea.form-control {
   min-height: 10rem;
 }
