--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -34,32 +34,50 @@ body {
 
 //Page Header
 .page-head {
-  background:#674172 url(https://unsplash.it/1920/600?image=844) no-repeat center center;
+  background:#674172 url(https://unsplash.it/1920/600?image=1078) no-repeat center center;
 	background-attachment: fixed;
 	background-size: cover;
   color:#FFF;
   margin-bottom:2rem;
-  padding:2rem 0 1rem;
+  //padding:2rem 0 1rem;
 
-	@media (min-width: $screen-md) {
-		padding:4rem 0 2rem;
-	}
 
-	@media (min-width: $screen-lg) {
-		padding:8rem 0 4rem;
-	}
+
+	.container {
+		height:5rem;
+		overflow:hidden;
+		position:relative;
+
+		@media (min-width: $screen-md) {
+			height:7rem;
+		}
+
+		@media (min-width: $screen-lg) {
+			height:10rem;
+		}
+
+	}//container
 
 	h1 {
 		font-weight: 900;
 		font-size: 2rem;
+		letter-spacing:-.08rem;
+		margin:0;
 		text-transform: lowercase;
 		text-shadow: 1px 1px 1px #333333;
 
+		bottom:-6px;
+		left:0;
+		position:absolute;
+		z-index:1;
+
 		@media (min-width: $screen-md) {
+			bottom:-9px;
 			font-size: 3rem;
 		}
 
 		@media (min-width: $screen-lg) {
+			bottom:-14px;
 			font-size: 4rem;
 		}
 	}
