update to index

--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -34,50 +34,54 @@ body {
 
 //Page Header
 .page-head {
-  background:#674172 url(https://unsplash.it/1920/600?image=1078) no-repeat center center;
-	background-attachment: fixed;
-	background-size: cover;
-  color:#FFF;
+  background:#674172;
+	background: rgba(103,65,114,1);
+	background: -moz-linear-gradient(45deg, rgba(103,65,114,1) 0%, rgba(147,93,163,1) 99%, rgba(147,93,163,1) 100%);
+	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(103,65,114,1)), color-stop(99%, rgba(147,93,163,1)), color-stop(100%, rgba(147,93,163,1)));
+	background: -webkit-linear-gradient(45deg, rgba(103,65,114,1) 0%, rgba(147,93,163,1) 99%, rgba(147,93,163,1) 100%);
+	background: -o-linear-gradient(45deg, rgba(103,65,114,1) 0%, rgba(147,93,163,1) 99%, rgba(147,93,163,1) 100%);
+	background: -ms-linear-gradient(45deg, rgba(103,65,114,1) 0%, rgba(147,93,163,1) 99%, rgba(147,93,163,1) 100%);
+	background: linear-gradient(45deg, rgba(103,65,114,1) 0%, rgba(147,93,163,1) 99%, rgba(147,93,163,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#674172', endColorstr='#935da3', GradientType=1 );
+
+
+	color:#FFF;
   margin-bottom:2rem;
-  //padding:2rem 0 1rem;
+
+	@media (min-width: $screen-md) {
+	}
+
+	@media (min-width: $screen-lg) {
+	}
+
 
 
 
 	.container {
-		height:5rem;
-		overflow:hidden;
-		position:relative;
+		padding: 2rem 0 1rem;
 
 		@media (min-width: $screen-md) {
-			height:7rem;
+			padding: 4rem 0 2rem;
 		}
 
 		@media (min-width: $screen-lg) {
-			height:10rem;
+			padding: 6rem 0 2rem;
 		}
 
 	}//container
 
 	h1 {
-		font-weight: 900;
+		font-weight: 700;
 		font-size: 2rem;
 		letter-spacing:-.08rem;
 		margin:0;
-		text-transform: lowercase;
 		text-shadow: 1px 1px 1px #333333;
 
-		bottom:-6px;
-		left:0;
-		position:absolute;
-		z-index:1;
-
 		@media (min-width: $screen-md) {
-			bottom:-9px;
 			font-size: 3rem;
 		}
 
 		@media (min-width: $screen-lg) {
-			bottom:-14px;
 			font-size: 4rem;
 		}
 	}
