--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -60,3 +60,11 @@ a {
 textarea.form-control {
 	min-height:10rem;
 }
+
+
+
+.imgur-embed-iframe-pub {
+	max-width:100%!important;
+	width:100%;
+
+}
